fix(overlay-alert): fix spacing and corners of overlay alert

--- a/src/components/OverlayAlert/OverlayAlert.style.scss
+++ b/src/components/OverlayAlert/OverlayAlert.style.scss
@@ -4,9 +4,6 @@
     min-width: 20rem;
 
     > :first-child {
-      align-items: flex-end;
-      display: flex;
-      justify-content: space-between;
       width: 100%;
 
       > .md-overlay-alert-title {
